@@ -1,3 +1,11 @@
+2015-08-22  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Upgrade GNU MPC package set to version 1.0.2
+
+	* mingw32/mingw32-mpc.xml: Add new release specifications.
+	(mpc) <info>: New subpackage; specify it, as initial release.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2015-08-20  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Revert corruption of file attributes (again).
